--- a/.sasslintrc
+++ b/.sasslintrc
@@ -1,15 +1,14 @@
 files:
-  include: "**/*.s+(a|c)ss"
-  ignore:
-    - node_modules/**
+    include: '**/*.s+(a|c)ss'
+    ignore:
+        - node_modules/**
 syntax:
     include:
-      - scss
-      - sass
+        - scss
+        - sass
 rules:
-  indentation:
-    - 4
-    -
-      size: 4
-  no-misspelled-properties:
-    - 2
+    indentation:
+        - 4
+        - size: 4
+    no-misspelled-properties:
+        - 2
