--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "parcel ./src/index.html",
         "build": "npm run clear && parcel build ./src/index.html --no-source-maps",
         "clear": "rimraf ./dist ./.cache",
-        "lint": "eslint --fix ./src --color",
+        "lint": "eslint --fix ./src/ --color",
         "sass-lint": "sass-lint ./src/**/*.sass -v -q"
     },
     "husky": {
