--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
-    "extends": ["eslint:recommended", "standard"],
+    "extends": ["eslint:recommended", "standard", "standard-react"],
     "parser": "babel-eslint",
     "rules": {
         "no-console": "off",
         "indent": ["error", 4],
+        "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "space-before-function-paren": [
             "error",
             {
