--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "parcel ./src/index.html",
-        "build": "npm run clear && parcel build ./src/index.html --no-source-maps",
+        "build": "npm run clear && SET \"NODE_ENV=production\" && parcel build ./src/index.html --no-source-maps",
         "clear": "rimraf ./dist ./.cache",
         "lint": "eslint --fix ./src/ --color",
         "sass-lint": "sass-lint ./src/**/*.sass -v -q"
@@ -38,13 +38,17 @@
         "babel-eslint": "^10.0.1",
         "eslint": "^5.12.1",
         "eslint-config-standard": "^12.0.0",
-        "eslint-plugin-import": "^2.15.0",
+        "eslint-config-standard-react": "^7.0.2",
+        "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
         "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-react": "^7.12.4",
         "eslint-plugin-standard": "^4.0.0",
         "husky": "^1.3.1",
         "lint-staged": "^8.1.0",
         "parcel-bundler": "^1.11.0",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
         "rimraf": "^2.6.3",
         "sass": "^1.16.1",
         "sass-lint": "^1.12.1"
