--- a/.sasslintrc
+++ b/.sasslintrc
@@ -7,7 +7,10 @@ syntax:
         - sass
 rules:
     indentation:
-        - 4
+        - 2
         - size: 4
     no-misspelled-properties:
         - 2
+    clean-import-paths:
+        - 2
+        - leading-underscore: true
