--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@babel/core": "^7.2.2",
         "@babel/plugin-proposal-class-properties": "^7.3.0",
         "babel-eslint": "^10.0.1",
+        "bulma": "^0.7.4",
         "eslint": "^5.12.1",
         "eslint-config-standard": "^12.0.0",
         "eslint-config-standard-react": "^7.0.2",
